# log8415-tp3

./: .gitignore  README.md  pyproject.toml
deploy/: __main__.py  bench.py  instances.py  setup.py
destroy/: __main__.py  destroy.py
gatekeeper/: Dockerfile  __main__.py
proxy/: Dockerfile  __main__.py
