[tool.poetry]
name = "log8415-tp3"
version = "0.1.0"
description = "log8415-tp3 project"
authors = ["Quentin Guidée <git@arra.red>"]
license = "UNLICENSED"
readme = "README.md"
packages = [
    { include = "deploy", from = "." },
    { include = "destroy", from = "." },
    { include = "benchmarks", from = "." },
    { include = "proxy", from = "." },
    { include = "gatekeeper", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.33.7"
backoff = "^2.2.1"
rich = "^13.7.0"
paramiko = "^3.3.1"
requests = "^2.31.0"
ping3 = "^4.0.4"

[tool.poetry.group.proxy.dependencies]
flask = "^2.3.3"
ping3 = "^4.0.4"

[tool.poetry.group.gatekeeper.dependencies]
flask = "^2.3.3"

[tool.poetry.group.dev.dependencies]
boto3-stubs = { extras = ["essential"], version = "^1.33.7" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
